@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.kaito" name="kaito" provider-name="SwagOtaku" version="0.0.3">
+<addon id="plugin.video.kaito" name="kaito" provider-name="SwagOtaku" version="0.0.4">
   <requires>
     <import addon="xbmc.python" version="2.25.0" />
     <import addon="script.module.requests" version="2.19.1" />
@@ -22,6 +22,9 @@
 			<fanart>fanart.jpg</fanart>
 		</assets>
     <news>
+Changelog 0.0.4:
+Fixed bug
+
 Changelog 0.0.3:
 Added Rescrape Item option to episode context menu
 Added setting 'Title Language' to set titles to romaji/english
