@@ -1,3 +1,6 @@
+Changelog 0.0.4:
+- Fixed bug
+
 Changelog 0.0.3:
 - Added Rescrape Item option to episode context menu
 - Added setting 'Title Language' to set titles to romaji/english
